[WIP] injector works on Windows! zdoom, gzdoom, zandronum
However, it crashes zandronum on exit. Maybe I should shut down the rcon thread.

--- a/c/Makefile
+++ b/c/Makefile
@@ -1,4 +1,4 @@
-CFLAGS=-fPIC -W -Wall
+CFLAGS=-fPIC -W -Wall -O2
 CC=zig cc
 LIBS=
 
@@ -8,10 +8,10 @@ libinjector.so: injector-linux.o rconserver.o
 	$(CC) $(LIBS) -shared -o $@ $^
 
 rconserver64.o: rconserver.c
-	$(CC) -target x86_64-windows-gnu -o $@ -c $<
+	$(CC) $(CFLAGS) -target x86_64-windows-gnu -o $@ -c $<
 
 rconserver32.o: rconserver.c
-	$(CC) -target i386-windows-gnu -o $@ -c $<
+	$(CC) $(CFLAGS) -target i386-windows-gnu -o $@ -c $<
 
 libinjector64.dll: injector-windows64.o rconserver64.o
 	$(CC) -target x86_64-windows-gnu -shared -lws2_32 -o $@ $^
@@ -24,10 +24,10 @@ libinjector32.dll: injector-windows32.o rconserver32.o
 injector-linux.o: injector-linux.c injector.h
 
 injector-windows64.o: injector-windows.c injector.h
-	$(CC) -target x86_64-windows-gnu -o $@ -c $<
+	$(CC) $(CFLAGS) -target x86_64-windows-gnu -o $@ -c $<
 
 injector-windows32.o: injector-windows.c injector.h
-	$(CC) -target i386-windows-gnu -o $@ -c $<
+	$(CC) $(CFLAGS) -target i386-windows-gnu -o $@ -c $<
 
 clean:
 	rm -f *.o *.so *.dll
